build: Removed asciidoctor warning