@@ -34,6 +34,10 @@ bootJar {
 }
 
 asciidoctor {
+    forkOptions {
+      // Fix issue with JDK16+
+      jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
+    }
     resources {
     	from("$rootDir/src/media") {
      		include '**/*'
